# iced-layout-inspector

./: Cargo.toml  DESIGN.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs  operation.rs  output.rs  server.rs
