[package]
name = "iced-layout-inspector"
version = "0.1.0"
edition = "2024"
description = "Layout debugging tools for iced - dump widget tree with bounds for headless inspection"
license = "MIT"

[dependencies]
iced_core = "0.14"
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc.git", tag = "v0.2.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["sync", "time"], optional = true }
glob = { version = "0.3", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg"] }
base64 = { version = "0.22", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
iced = { version = "0.14", features = ["tiny-skia"] }

[features]
# Enable integration with iced_test Simulator
test = []
# Enable IPC debug server for runtime layout inspection
server = ["dep:peercred-ipc", "dep:serde", "dep:tokio", "dep:glob", "dep:image", "dep:base64", "dep:libc"]
